--- a/readme.Rmd
+++ b/readme.Rmd
@@ -25,19 +25,19 @@ List of activities performed when the corresponding measurements were taken and 
 subject_test <- test/subject_test.txt
 contains test data of test subjects being observed
 
-x_test <- test/X_test.txt :
+xtest <- test/X_test.txt :
 contains recorded features test data
 
-y_test <- test/y_test.txt :
+ytest <- test/y_test.txt :
 contains test data of activities’code labels
 
 subject_train <- test/subject_train.txt: 
 contains train data of subjects being observed
 
-x_train <- test/X_train.txt :
+xtrain <- test/X_train.txt :
 contains recorded features train data
 
-y_train <- test/y_train.txt : 
+ytrain <- test/y_train.txt : 
 contains train data of activities’code labels
 
 Merges the training and the test sets to create one data set
